--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -142,6 +142,10 @@
   top: 50% !important;
 }
 
+.top-\[5px\] {
+  top: 5px !important;
+}
+
 .top-\[90px\] {
   top: 90px !important;
 }
@@ -159,9 +163,19 @@
   margin-bottom: 0.5rem !important;
 }
 
+.my-4 {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
+
 .my-5 {
   margin-top: 1.25rem !important;
   margin-bottom: 1.25rem !important;
+}
+
+.my-3 {
+  margin-top: 0.75rem !important;
+  margin-bottom: 0.75rem !important;
 }
 
 .-mr-1 {
@@ -184,24 +198,24 @@
   margin-right: 0.875rem !important;
 }
 
-.ms-2 {
-  margin-inline-start: 0.5rem !important;
+.mr-4 {
+  margin-right: 1rem !important;
 }
 
-.mt-2 {
-  margin-top: 0.5rem !important;
+.ms-2 {
+  margin-inline-start: 0.5rem !important;
 }
 
 .mt-4 {
   margin-top: 1rem !important;
 }
 
-.mt-\[80px\] {
-  margin-top: 80px !important;
+.mt-\[17px\] {
+  margin-top: 17px !important;
 }
 
-.block {
-  display: block !important;
+.mt-\[80px\] {
+  margin-top: 80px !important;
 }
 
 .inline-block {
@@ -227,6 +241,10 @@
 
 .h-5 {
   height: 1.25rem !important;
+}
+
+.h-\[1px\] {
+  height: 1px !important;
 }
 
 .h-\[3\.5rem\] {
@@ -337,11 +355,6 @@
   justify-content: space-between !important;
 }
 
-.gap-x-1\.5 {
-  -moz-column-gap: 0.375rem !important;
-       column-gap: 0.375rem !important;
-}
-
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0 !important;
   margin-right: calc(1rem * var(--tw-space-x-reverse)) !important;
@@ -360,6 +373,10 @@
 
 .overflow-hidden {
   overflow: hidden !important;
+}
+
+.rounded {
+  border-radius: 0.25rem !important;
 }
 
 .rounded-lg {
@@ -395,6 +412,10 @@
   border-top-width: 4px !important;
 }
 
+.border-none {
+  border-style: none !important;
+}
+
 .border-gray-500 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(107 114 128 / var(--tw-border-opacity)) !important;
@@ -403,6 +424,11 @@
 .bg-\[\#1a2335\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(26 35 53 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-\[\#212b3c\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(33 43 60 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-\[\#696e76\] {
@@ -432,11 +458,6 @@
   padding: 10px 30px !important;
 }
 
-.px-3 {
-  padding-left: 0.75rem !important;
-  padding-right: 0.75rem !important;
-}
-
 .px-4 {
   padding-left: 1rem !important;
   padding-right: 1rem !important;
@@ -457,11 +478,6 @@
   padding-bottom: 0.25rem !important;
 }
 
-.py-2 {
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
-}
-
 .py-3 {
   padding-top: 0.75rem !important;
   padding-bottom: 0.75rem !important;
@@ -470,6 +486,26 @@
 .py-5 {
   padding-top: 1.25rem !important;
   padding-bottom: 1.25rem !important;
+}
+
+.px-3 {
+  padding-left: 0.75rem !important;
+  padding-right: 0.75rem !important;
+}
+
+.px-2 {
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
+}
+
+.px-1 {
+  padding-left: 0.25rem !important;
+  padding-right: 0.25rem !important;
+}
+
+.py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
 }
 
 .pb-3 {
@@ -496,6 +532,10 @@
   text-align: center !important;
 }
 
+.text-start {
+  text-align: start !important;
+}
+
 .font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
 }
@@ -503,6 +543,11 @@
 .text-2xl {
   font-size: 1.5rem !important;
   line-height: 2rem !important;
+}
+
+.text-base {
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
 }
 
 .text-sm {
@@ -513,6 +558,16 @@
 .text-xl {
   font-size: 1.25rem !important;
   line-height: 1.75rem !important;
+}
+
+.text-lg {
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
+}
+
+.text-3xl {
+  font-size: 1.875rem !important;
+  line-height: 2.25rem !important;
 }
 
 .font-bold {
@@ -535,11 +590,6 @@
 .text-blue-700 {
   --tw-text-opacity: 1 !important;
   color: rgb(29 78 216 / var(--tw-text-opacity)) !important;
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(156 163 175 / var(--tw-text-opacity)) !important;
 }
 
 .text-gray-500 {
@@ -586,29 +636,14 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05) !important;
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color) !important;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
-}
-
 .ring-1 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
 }
 
-.ring-inset {
-  --tw-ring-inset: inset !important;
-}
-
 .ring-black\/5 {
   --tw-ring-color: rgb(0 0 0 / 0.05) !important;
-}
-
-.ring-gray-300 {
-  --tw-ring-opacity: 1 !important;
-  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity)) !important;
 }
 
 .transition {
@@ -659,7 +694,6 @@ a {
 .backupsBtn {
   min-width: 6rem;
   background-color: #1f2937;
-  border: 1px solid #4b5563;
   color: #d1d5db;
   font-size: 0.875rem;
   border-radius: 0.5rem;
@@ -730,11 +764,6 @@ a {
   color: #a0aec0;
 }
 
-.hover\:bg-gray-50:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
-}
-
 .hover\:underline:hover {
   text-decoration-line: underline !important;
 }
@@ -759,23 +788,8 @@ a {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
 
-.data-\[focus\]\:bg-gray-100[data-focus] {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
-}
-
-.data-\[focus\]\:text-gray-900[data-focus] {
-  --tw-text-opacity: 1 !important;
-  color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
-}
-
 .data-\[closed\]\:opacity-0[data-closed] {
   opacity: 0 !important;
-}
-
-.data-\[focus\]\:outline-none[data-focus] {
-  outline: 2px solid transparent !important;
-  outline-offset: 2px !important;
 }
 
 .data-\[enter\]\:duration-100[data-enter] {
