--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -24,10 +24,9 @@ a {
 /* Containers */
 
 .mainContainer {
-  min-height: 100%;
+  /* min-height: 100%;
   display: flex;
-  flex-direction: column;
-  margin-top: 58px;
+  margin-top: 58px; */
 }
 
 .reusableContainer {
