--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -158,6 +158,11 @@
   z-index: 50 !important;
 }
 
+.mx-auto {
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
 .my-2 {
   margin-top: 0.5rem !important;
   margin-bottom: 0.5rem !important;
@@ -171,6 +176,11 @@
 .my-5 {
   margin-top: 1.25rem !important;
   margin-bottom: 1.25rem !important;
+}
+
+.my-auto {
+  margin-top: auto !important;
+  margin-bottom: auto !important;
 }
 
 .-mr-1 {
@@ -250,12 +260,44 @@
   height: 820px !important;
 }
 
+.h-\[90vh\] {
+  height: 90vh !important;
+}
+
 .h-auto {
   height: auto !important;
 }
 
+.h-full {
+  height: 100% !important;
+}
+
 .h-screen {
   height: 100vh !important;
+}
+
+.h-\[50\%\] {
+  height: 50% !important;
+}
+
+.h-\[70\%\] {
+  height: 70% !important;
+}
+
+.h-\[80\%\] {
+  height: 80% !important;
+}
+
+.h-\[60\%\] {
+  height: 60% !important;
+}
+
+.h-\[85\%\] {
+  height: 85% !important;
+}
+
+.h-\[809\%\] {
+  height: 809% !important;
 }
 
 .min-h-\[3\.25rem\] {
@@ -282,12 +324,36 @@
   width: 100% !important;
 }
 
-.max-w-3xl {
-  max-width: 48rem !important;
+.w-\[50\%\] {
+  width: 50% !important;
+}
+
+.w-\[70\%\] {
+  width: 70% !important;
+}
+
+.w-\[80\%\] {
+  width: 80% !important;
+}
+
+.w-\[60\%\] {
+  width: 60% !important;
+}
+
+.max-w-7xl {
+  max-width: 80rem !important;
+}
+
+.max-w-full {
+  max-width: 100% !important;
 }
 
 .max-w-md {
   max-width: 28rem !important;
+}
+
+.flex-grow {
+  flex-grow: 1 !important;
 }
 
 .origin-top-right {
@@ -432,6 +498,16 @@
   background-color: rgb(148 148 148 / var(--tw-bg-opacity)) !important;
 }
 
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-gray-700 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity)) !important;
+}
+
 .bg-white {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
@@ -563,6 +639,11 @@
   color: rgb(29 78 216 / var(--tw-text-opacity)) !important;
 }
 
+.text-gray-300 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(209 213 219 / var(--tw-text-opacity)) !important;
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1 !important;
   color: rgb(107 114 128 / var(--tw-text-opacity)) !important;
@@ -647,10 +728,9 @@ a {
 /* Containers */
 
 .mainContainer {
-  min-height: 100%;
+  /* min-height: 100%;
   display: flex;
-  flex-direction: column;
-  margin-top: 58px;
+  margin-top: 58px; */
 }
 
 .reusableContainer {
@@ -783,6 +863,11 @@ a {
   .sm\:flex-nowrap {
     flex-wrap: nowrap !important;
   }
+
+  .sm\:px-6 {
+    padding-left: 1.5rem !important;
+    padding-right: 1.5rem !important;
+  }
 }
 
 @media (min-width: 768px) {
@@ -798,6 +883,11 @@ a {
 @media (min-width: 1024px) {
   .lg\:max-w-xl {
     max-width: 36rem !important;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
   }
 }
 
