--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -147,6 +147,10 @@
   top: 0.5rem !important;
 }
 
+.top-4 {
+  top: 1rem !important;
+}
+
 .top-\[2px\] {
   top: 2px !important;
 }
@@ -186,6 +190,16 @@
   margin-bottom: 0px !important;
 }
 
+.my-1 {
+  margin-top: 0.25rem !important;
+  margin-bottom: 0.25rem !important;
+}
+
+.my-10 {
+  margin-top: 2.5rem !important;
+  margin-bottom: 2.5rem !important;
+}
+
 .my-2 {
   margin-top: 0.5rem !important;
   margin-bottom: 0.5rem !important;
@@ -219,12 +233,24 @@
   margin-bottom: 0.25rem !important;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem !important;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem !important;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem !important;
+}
+
 .mb-4 {
   margin-bottom: 1rem !important;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem !important;
 }
 
 .ml-1 {
@@ -275,6 +301,10 @@
   margin-top: 1.25rem !important;
 }
 
+.mt-6 {
+  margin-top: 1.5rem !important;
+}
+
 .mt-\[17px\] {
   margin-top: 17px !important;
 }
@@ -306,6 +336,10 @@
 .size-5 {
   width: 1.25rem !important;
   height: 1.25rem !important;
+}
+
+.h-2 {
+  height: 0.5rem !important;
 }
 
 .h-5 {
@@ -369,6 +403,10 @@
   min-height: 100vh !important;
 }
 
+.w-3\/4 {
+  width: 75% !important;
+}
+
 .w-5 {
   width: 1.25rem !important;
 }
@@ -391,6 +429,10 @@
 
 .w-\[60\%\] {
   width: 60% !important;
+}
+
+.w-\[70\%\] {
+  width: 70% !important;
 }
 
 .w-\[80vw\] {
@@ -457,6 +499,10 @@
   list-style-type: none !important;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
 }
@@ -493,6 +539,15 @@
   gap: 0.5rem !important;
 }
 
+.gap-6 {
+  gap: 1.5rem !important;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem !important;
+       column-gap: 0.5rem !important;
+}
+
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0 !important;
   margin-right: calc(1rem * var(--tw-space-x-reverse)) !important;
@@ -511,6 +566,12 @@
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse)) !important;
 }
 
+.space-y-9 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0 !important;
+  margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse))) !important;
+  margin-bottom: calc(2.25rem * var(--tw-space-y-reverse)) !important;
+}
+
 .self-end {
   align-self: flex-end !important;
 }
@@ -523,8 +584,16 @@
   overflow-y: auto !important;
 }
 
+.break-words {
+  overflow-wrap: break-word !important;
+}
+
 .rounded {
   border-radius: 0.25rem !important;
+}
+
+.rounded-full {
+  border-radius: 9999px !important;
 }
 
 .rounded-lg {
@@ -637,6 +706,10 @@
   border-top-color: rgb(34 34 34 / var(--tw-border-opacity)) !important;
 }
 
+.bg-\[\#0e172ab8\] {
+  background-color: #0e172ab8 !important;
+}
+
 .bg-\[\#121212\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(18 18 18 / var(--tw-bg-opacity)) !important;
@@ -662,6 +735,11 @@
   background-color: rgb(34 34 34 / var(--tw-bg-opacity)) !important;
 }
 
+.bg-\[\#232d42\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(35 45 66 / var(--tw-bg-opacity)) !important;
+}
+
 .bg-\[\#272727\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(39 39 39 / var(--tw-bg-opacity)) !important;
@@ -682,9 +760,19 @@
   background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity)) !important;
+}
+
 .bg-gray-700 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-green-600 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-white {
@@ -715,6 +803,14 @@
 
 .p-4 {
   padding: 1rem !important;
+}
+
+.p-6 {
+  padding: 1.5rem !important;
+}
+
+.p-8 {
+  padding: 2rem !important;
 }
 
 .p-\[5px_9px\] {
@@ -750,6 +846,11 @@
   padding-right: 1.5rem !important;
 }
 
+.px-8 {
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
+}
+
 .py-1 {
   padding-top: 0.25rem !important;
   padding-bottom: 0.25rem !important;
@@ -758,6 +859,11 @@
 .py-3 {
   padding-top: 0.75rem !important;
   padding-bottom: 0.75rem !important;
+}
+
+.py-4 {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
 }
 
 .py-5 {
@@ -810,13 +916,17 @@
   line-height: 2rem !important;
 }
 
-.text-9xl {
-  font-size: 8rem !important;
-  line-height: 1 !important;
+.text-3xl {
+  font-size: 1.875rem !important;
+  line-height: 2.25rem !important;
 }
 
 .text-\[14px\] {
   font-size: 14px !important;
+}
+
+.text-\[16px\] {
+  font-size: 16px !important;
 }
 
 .text-\[18px\] {
@@ -897,6 +1007,11 @@
   color: rgb(103 232 249 / var(--tw-text-opacity)) !important;
 }
 
+.text-gray-200 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(229 231 235 / var(--tw-text-opacity)) !important;
+}
+
 .text-gray-300 {
   --tw-text-opacity: 1 !important;
   color: rgb(209 213 219 / var(--tw-text-opacity)) !important;
@@ -922,14 +1037,24 @@
   color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
 }
 
-.text-green-300 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(134 239 172 / var(--tw-text-opacity)) !important;
-}
-
 .text-green-400 {
   --tw-text-opacity: 1 !important;
   color: rgb(74 222 128 / var(--tw-text-opacity)) !important;
+}
+
+.text-green-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(22 163 74 / var(--tw-text-opacity)) !important;
+}
+
+.text-purple-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(168 85 247 / var(--tw-text-opacity)) !important;
+}
+
+.text-purple-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(147 51 234 / var(--tw-text-opacity)) !important;
 }
 
 .text-red-500 {
@@ -945,6 +1070,11 @@
 .text-yellow-500 {
   --tw-text-opacity: 1 !important;
   color: rgb(234 179 8 / var(--tw-text-opacity)) !important;
+}
+
+.text-yellow-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(202 138 4 / var(--tw-text-opacity)) !important;
 }
 
 .shadow {
@@ -987,6 +1117,16 @@
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter !important;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
   transition-duration: 150ms !important;
+}
+
+.transition-shadow {
+  transition-property: box-shadow !important;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
+  transition-duration: 150ms !important;
+}
+
+.duration-300 {
+  transition-duration: 300ms !important;
 }
 
 body {
@@ -1164,12 +1304,22 @@ a {
   text-decoration-line: underline !important;
 }
 
+.hover\:shadow-xl:hover {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1) !important;
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent !important;
   outline-offset: 2px !important;
 }
 
 @media (min-width: 640px) {
+  .sm\:w-1\/2 {
+    width: 50% !important;
+  }
+
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
   }
@@ -1180,12 +1330,20 @@ a {
 }
 
 @media (min-width: 768px) {
+  .md\:w-1\/4 {
+    width: 25% !important;
+  }
+
   .md\:w-\[225px\] {
     width: 225px !important;
   }
 
   .md\:max-w-lg {
     max-width: 32rem !important;
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
   }
 
   .md\:grid-cols-4 {
@@ -1202,6 +1360,10 @@ a {
 }
 
 @media (min-width: 1024px) {
+  .lg\:w-80 {
+    width: 20rem !important;
+  }
+
   .lg\:max-w-xl {
     max-width: 36rem !important;
   }
