--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -1067,6 +1067,11 @@
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 
+.text-yellow-400 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(250 204 21 / var(--tw-text-opacity)) !important;
+}
+
 .text-yellow-500 {
   --tw-text-opacity: 1 !important;
   color: rgb(234 179 8 / var(--tw-text-opacity)) !important;
