--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -184,6 +184,11 @@
   margin-right: 0.5rem !important;
 }
 
+.mx-4 {
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
+}
+
 .mx-\[2px\] {
   margin-left: 2px !important;
   margin-right: 2px !important;
@@ -234,21 +239,6 @@
   margin-bottom: auto !important;
 }
 
-.mx-8 {
-  margin-left: 2rem !important;
-  margin-right: 2rem !important;
-}
-
-.mx-6 {
-  margin-left: 1.5rem !important;
-  margin-right: 1.5rem !important;
-}
-
-.mx-4 {
-  margin-left: 1rem !important;
-  margin-right: 1rem !important;
-}
-
 .-mr-1 {
   margin-right: -0.25rem !important;
 }
@@ -259,10 +249,6 @@
 
 .mb-10 {
   margin-bottom: 2.5rem !important;
-}
-
-.mb-12 {
-  margin-bottom: 3rem !important;
 }
 
 .mb-16 {
@@ -438,6 +424,14 @@
   height: 100vh !important;
 }
 
+.h-24 {
+  height: 6rem !important;
+}
+
+.h-\[94vh\] {
+  height: 94vh !important;
+}
+
 .max-h-\[350px\] {
   max-height: 350px !important;
 }
@@ -453,6 +447,26 @@
 .max-h-max {
   max-height: -moz-max-content !important;
   max-height: max-content !important;
+}
+
+.max-h-24 {
+  max-height: 6rem !important;
+}
+
+.max-h-1 {
+  max-height: 0.25rem !important;
+}
+
+.max-h-64 {
+  max-height: 16rem !important;
+}
+
+.max-h-screen {
+  max-height: 100vh !important;
+}
+
+.min-h-64 {
+  min-height: 16rem !important;
 }
 
 .min-h-\[3\.25rem\] {
@@ -676,6 +690,24 @@
   margin-bottom: calc(2.25rem * var(--tw-space-y-reverse)) !important;
 }
 
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0 !important;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse))) !important;
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse)) !important;
+}
+
+.space-y-24 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0 !important;
+  margin-top: calc(6rem * calc(1 - var(--tw-space-y-reverse))) !important;
+  margin-bottom: calc(6rem * var(--tw-space-y-reverse)) !important;
+}
+
+.space-y-7 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0 !important;
+  margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse))) !important;
+  margin-bottom: calc(1.75rem * var(--tw-space-y-reverse)) !important;
+}
+
 .self-end {
   align-self: flex-end !important;
 }
@@ -686,15 +718,6 @@
 
 .overflow-y-auto {
   overflow-y: auto !important;
-}
-
-.whitespace-nowrap {
-  white-space: nowrap !important;
-}
-
-.break-normal {
-  overflow-wrap: normal !important;
-  word-break: normal !important;
 }
 
 .break-words {
@@ -989,6 +1012,16 @@
   padding-right: 0.25rem !important;
 }
 
+.px-12 {
+  padding-left: 3rem !important;
+  padding-right: 3rem !important;
+}
+
+.px-2 {
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
+}
+
 .px-3 {
   padding-left: 0.75rem !important;
   padding-right: 0.75rem !important;
@@ -1034,27 +1067,8 @@
   padding-bottom: 1.25rem !important;
 }
 
-.px-10 {
-  padding-left: 2.5rem !important;
-  padding-right: 2.5rem !important;
-}
-
-.px-12 {
-  padding-left: 3rem !important;
-  padding-right: 3rem !important;
-}
-
-.px-2 {
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important;
-}
-
 .pb-3 {
   padding-bottom: 0.75rem !important;
-}
-
-.pl-12 {
-  padding-left: 3rem !important;
 }
 
 .pl-6 {
@@ -1067,10 +1081,6 @@
 
 .pr-10 {
   padding-right: 2.5rem !important;
-}
-
-.pr-12 {
-  padding-right: 3rem !important;
 }
 
 .pr-5 {
